site/docs/v0.4.1/en/components/agent-workbench.mdx
# Agent Workbench

Agent Workbench provides the responsive regions needed to author, configure, run, and inspect an Agent. It is provider-neutral: A3S Code may be the native provider, but execution state and provider APIs remain in the host application.

<Preview class="w-full">
  <section
    class="agent-workbench"
    aria-label="Coding Agent workbench"
    data-agent-workbench-primary-demo="en"
    style="--agent-workbench-context-size:13.5rem;--agent-workbench-inspector-size:15rem"
  >
    <aside class="card" data-size="sm" data-agent-context>
      <header>
        <h2 data-agent-workbench-title>Agent context</h2>
        <p>Immutable release inputs</p>
      </header>
      <section>
        <nav class="item-group" aria-label="Agent resources">
          <a
            class="item"
            data-variant="muted"
            data-size="xs"
            href="#agent-instructions"
            data-agent-context-current
            aria-current="page"
          >
            <section>
              <h3>Instructions</h3>
              <p>agent.acl</p>
            </section>
          </a>
          <a
            class="item"
            data-variant="outline"
            data-size="xs"
            href="#agent-tools"
          >
            <section>
              <h3>Tools</h3>
              <p>4 MCP capabilities</p>
            </section>
          </a>
          <a
            class="item"
            data-variant="outline"
            data-size="xs"
            href="#agent-skills"
          >
            <section>
              <h3>Skills</h3>
              <p>2 exact releases</p>
            </section>
          </a>
        </nav>
      </section>
    </aside>
    <article
      class="code-editor"
      data-size="sm"
      data-line-numbers="false"
      data-wrap="true"
      data-agent-canvas
    >
      <header>
        <div data-code-editor-file>
          <strong>agent.acl</strong>
        </div>
        <div data-code-editor-actions>
          <span class="badge" data-variant="secondary">
            ACL
          </span>
        </div>
      </header>
      <section>
        <textarea
          aria-label="Agent configuration"
          spellCheck={false}
          defaultValue={
            'agent "coding" {\n  provider = "a3s-code"\n  skills = ["review", "test"]\n}'
          }
        />
      </section>
      <footer>
        <div data-code-editor-info>
          <span data-code-editor-state>Draft</span>
        </div>
        <div data-code-editor-meta>
          <span>4 lines</span>
        </div>
      </footer>
    </article>
    <aside class="card" data-size="sm" data-agent-inspector>
      <header>
        <h2>Release binding</h2>
        <p>Exact provider and Skill revisions</p>
      </header>
      <section class="grid gap-3">
        <div class="field">
          <label for="agent-provider-demo-en">Provider</label>
          <select
            id="agent-provider-demo-en"
            class="select"
            data-agent-provider
            data-preview-onchange="const root=this.closest('[data-agent-workbench-primary-demo]'); root.dataset.providerSelected=this.value;"
          >
            <option value="a3s-code-0.8.4" selected>
              A3S Code · v0.8.4
            </option>
            <option value="a3s-code-0.9.0">A3S Code · v0.9.0</option>
          </select>
        </div>
        <dl class="property-list" data-size="sm" data-variant="plain">
          <div>
            <dt>Execution contract</dt>
            <dd>AgentExecutionProvider v1</dd>
          </div>
          <div>
            <dt>Mounted Skills</dt>
            <dd>2 read-only bundles</dd>
          </div>
        </dl>
      </section>
      <footer>
        <button
          type="button"
          class="btn"
          data-size="sm"
          data-agent-build-release
          data-preview-onclick="const root=this.closest('[data-agent-workbench-primary-demo]'); root.dataset.releaseBuilt='true'; const badge=root.querySelector('[data-agent-activity] .status-badge'); if(badge){ badge.setAttribute('data-state','success'); badge.textContent='Built'; }"
        >
          Build release
        </button>
      </footer>
    </aside>
    <section class="card" data-size="sm" data-agent-activity>
      <header>
        <h2>Execution activity</h2>
        <p>Durable semantic events</p>
        <span
          class="status-badge card-action"
          data-state="active"
          data-indicator
          data-agent-activity-status
        >
          Live
        </span>
      </header>
      <section>
        <ol class="timeline" aria-label="Execution activity">
          <li data-marker="1" data-state="success">
            <article class="item" data-variant="outline" data-size="xs">
              <section>
                <h3>Release resolved</h3>
                <p>Exact artifact and Skill digests recorded.</p>
              </section>
            </article>
          </li>
          <li data-marker="2" data-state="active" aria-current="step">
            <article class="item" data-variant="outline" data-size="xs">
              <section>
                <h3>Provider running</h3>
                <p>A3S Code is emitting ordered events.</p>
              </section>
            </article>
          </li>
        </ol>
      </section>
    </section>
  </section>
</Preview>

## Usage

Import the complete A3S bundle, then compose the regions from the components your product needs.

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

```html
<section class="agent-workbench" aria-label="Agent workbench">
  <aside data-agent-context>…</aside>
  <article data-agent-canvas>…</article>
  <aside data-agent-inspector>…</aside>
  <section data-agent-activity>…</section>
</section>
```

### Parameters

| API                                 | Required | Purpose                                                  |
| ----------------------------------- | -------- | -------------------------------------------------------- |
| `class="agent-workbench"`           | Yes      | Responsive workbench layout                              |
| `data-agent-context`                | Yes      | Conversations, files, releases, or other durable context |
| `data-agent-canvas`                 | Yes      | Primary authoring or execution surface                   |
| `data-agent-inspector`              | No       | Skill, MCP, provider, policy, and evidence controls      |
| `data-agent-activity`               | No       | Timeline, logs, traces, and execution evidence           |
| `data-context`                      | No       | `hidden` removes contextual navigation                    |
| `data-inspector`                    | No       | `hidden` removes the inspector                            |
| `--agent-workbench-gap`             | No       | Region gap; defaults to `0.75rem`                         |
| `--agent-workbench-context-size`    | No       | Context width; defaults to `15.5rem`                      |
| `--agent-workbench-canvas-basis`    | No       | Preferred canvas width; defaults to `19rem`               |
| `--agent-workbench-inspector-size`  | No       | Inspector width; defaults to `21rem`                      |
| `--agent-workbench-min-height`      | No       | Optional minimum workbench height                         |

## States and variants

Omit the inspector when the workflow has no secondary configuration, or set `data-inspector="hidden"` while a host-controlled inspector is closed. Regions wrap from three columns to paired rows and then one column according to the workbench's own available inline width, so the component remains usable inside documentation previews, split panes, dialogs, and full application canvases. A host application may promote context or inspector content into an accessible drawer when its own shell requires one.

Use Card, Tree, Code Editor, Field, Property List, Status Badge, Timeline, and Log Viewer inside the regions. Keep loading, empty, unavailable, error, and read-only states explicit in those child components.

## Accessibility

Name the workbench and every navigation or live region. Keep one page-level heading outside or inside the primary canvas, use landmarks that match the content, and preserve a logical DOM order: context, primary work, inspector, then activity. Responsive reflow must not change keyboard order. The host application owns focus after navigation, streaming announcements, validation, and destructive-action confirmation.

## React

```tsx
import { AgentWorkbench } from "@a3s-lab/ui/react";

export function Example() {
  return (
    <AgentWorkbench aria-label="Agent workbench">
      <aside data-agent-context="">
        <nav aria-label="Project context">
          <a href="#files">Files</a>
        </nav>
      </aside>
      <article data-agent-canvas="">
        <h1>Release verification</h1>
        <p>Review the current run and evidence.</p>
      </article>
      <aside data-agent-inspector="">
        <h2>Inspector</h2>
        <p>3 changed files</p>
      </aside>
      <section data-agent-activity="">
        <output aria-live="polite">Ready</output>
      </section>
    </AgentWorkbench>
  );
}
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.

## Vue

```vue
<script setup lang="ts">
import { AgentWorkbench } from "@a3s-lab/ui/vue";
</script>

<template>
  <AgentWorkbench aria-label="Agent workbench">
    <aside data-agent-context="">
      <nav aria-label="Project context"><a href="#files">Files</a></nav>
    </aside>
    <article data-agent-canvas="">
      <h1>Release verification</h1>
      <p>Review the current run and evidence.</p>
    </article>
    <aside data-agent-inspector="">
      <h2>Inspector</h2>
      <p>3 changed files</p>
    </aside>
    <section data-agent-activity="">
      <output aria-live="polite">Ready</output>
    </section>
  </AgentWorkbench>
</template>
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.
